[package]
name = "rust_ocr"
version = "0.1.0"
edition = "2018"
# Other metadata like authors, description, etc.

[dependencies]
tokio = { version = "1", features = ["full"] }
druid = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
cpal = "0.15.3"
async-std = "1.10.0"
hound = "3.4.0"
chrono = "0.4.19"
objc = { version = "0.2.7" }
cocoa = "0.25.0"

[build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
appkit = "0.1"
